fix spacings

--- a/src/scss/_budgets.scss
+++ b/src/scss/_budgets.scss
@@ -1,4 +1,9 @@
 .budgets {
+  .spending-summary {
+    h2 {
+      margin-bottom: 1.25em;
+    }
+  }
   .budget-container {
     grid-template-columns: 1fr;
   }
